--- a/package.json
+++ b/package.json
@@ -8,15 +8,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ibm/plex": "^6.0.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^12.0.4",
+    "@tailwindcss/typography": "^0.4.1",
+    "motion": "^10.4.0",
     "next": "12.0.4",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "semi": false
   }
 }
